--- a/public/index.html
+++ b/public/index.html
@@ -5,63 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Call App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 20px;
-        background-color: #f4f4f4;
-    }
-
-    h1 {
-        color: #333;
-    }
-
-    video {
-        width: 45%;
-        border: 1px solid black;
-        margin: 10px;
-    }
-
-    button {
-        margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-    }
-
-    button:hover {
-        background-color: #45a049;
-    }
-
-    input[type="text"] {
-        padding: 10px;
-        margin-top: 20px;
-        margin-right: 10px;
-        font-size: 16px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-    }
-
-    #roomDisplay {
-        margin-top: 20px;
-        color: #555;
-        font-style: italic;
-    }
-
-    @media screen and (max-width: 600px) {
-        video {
-            width: 90%;
-        }
-    }
-</style>
-
 <body>
     <h1>WebRTC Video Call</h1>
     <div>
@@ -78,5 +23,4 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
 </body>
-
 </html>
